--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -18,7 +18,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-
+        
+    - name: Running LS 
+      run: |
+        ls
+        
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
