--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -1,28 +1,15 @@
 name: CI
-
-on:
-  push:  
-
+'on':
+  push: null
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: upload req file
-      uses: actions/upload-artifact@v3
-      with:
-       name: requirements
-       path: requirements.txt
-       
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-        
-    - name: Running LS 
-      run: |
-        ls
-        
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      - uses: actions/checkout@v4 #added
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
